# Everybody-Codes

./: CMakeLists.txt  readme.md
src/main/cpp/utils/: point.h  utils.cpp  utils.h
src/main/cpp/year2024/: quest1.cpp  quest2.cpp  quest3.cpp
